--- a/style.css
+++ b/style.css
@@ -6,13 +6,43 @@
   box-sizing: border-box;
 }
 
+body {
+  background: linear-gradient(
+    145.44deg,
+    rgb(2, 152, 189) -4.982%,
+    rgb(2, 152, 189) 37.374%,
+    rgb(1, 165, 156) 57.715%,
+    rgb(175, 189, 91) 95.171%
+  );
+}
+
+.section{
+  height: 100vh;
+  overflow: hidden;
+}
+
+
 .header {
-  max-width: 1440px;
   width: 100%;
-  height: 100px;
   margin: 0 auto;
   display: flex;
   align-items: center;
+  justify-content: center;
+	background: #fff;
+  
+}
+
+.header-block{
+  max-width: 1440px;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  -moz-transform: scale(0.9, 0.9);
+  -ms-transform: scale(0.9, 0.9);
+  -webkit-transform: scale(0.9, 0.9);
+  -o-transform: scale(0.9, 0.9);
+  transform: scale(0.9, 0.9);
 }
 
 .logo-block {
@@ -42,24 +72,26 @@
 .main-section {
   position: relative;
   width: 100%;
-  height: 100vh;
-  background: linear-gradient(
-    145.44deg,
-    rgb(2, 152, 189) -4.982%,
-    rgb(2, 152, 189) 37.374%,
-    rgb(1, 165, 156) 57.715%,
-    rgb(175, 189, 91) 95.171%
-  );
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
   z-index: 1;
+  
 }
 
 .main-section__block {
+  position: relative;
   max-width: 1440px;
   width: 100%;
-  margin: 0 auto;
-  padding-top: 100px;
-  padding: 100px 0 0 41px;
+  /* padding: 100px 0 0 41px; */
+  padding: 0 0 0 41px;
+  -moz-transform: scale(0.9, 0.9);
+  -ms-transform: scale(0.9, 0.9);
+  -webkit-transform: scale(0.9, 0.9);
+  -o-transform: scale(0.9, 0.9);
+  transform: scale(0.9, 0.9);
 }
 
 .main-title {
@@ -101,15 +133,24 @@
   border: none;
   border-radius: 15px;
   background: #cce251;
+  transition: 0.3s;
+  cursor: pointer;
 }
+
+.main-btn:hover{
+  border: 2px solid #cce251;
+  background: none;
+  color: #cce251;
+}
+
 
 .possible {
   width: 888px;
   height: 898px;
   object-fit: cover;
   position: absolute;
-  top: -120px;
-  right: -40px;
+  top: -330px;
+  right: -190px;
   z-index: -1;
 }
 
@@ -121,8 +162,8 @@
 
 @media screen and (max-width: 1024px) {
   .possible {
-    top: 50px;
-    right: -80px;
+    top: -330px;
+    right: -190px;
   }
 }
 
@@ -131,21 +172,29 @@
     width: 600px;
     height: 600px;
     top: auto;
-    bottom: 120px;
+    bottom: -80px;
+    right: -120px;
     filter: blur(5px);
   }
   .header {
     padding: 0 2% 0 2%;
   }
+  .section{
+    overflow: auto;
+  }
   .main-section__block {
-    padding: 100px 3% 0 2%;
+    padding: 0 3% 0 2%;
   }
 }
 
 @media screen and (max-width: 480px) {
   .header {
     padding: 0 4% 0 4%;
+    height: 75px;
   }
+	.main-section{
+		padding-bottom: 120px;
+	}
   .main-section__block {
     padding: 100px 5% 0 4%;
   }
@@ -160,8 +209,8 @@
   .possible {
     width: 450px;
     height: 450px;
-    bottom: 10px;
-    right: -20px;
+    bottom: -260px;
+    right: -50px;
   }
   .main-title {
     font-size: 40px;
