--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
   justify-content: center;
   overflow: hidden;
   z-index: 1;
-  padding-top: 90px;
+  padding-top: 45px;
 }
 
 .main-section__block {
@@ -145,9 +145,14 @@ body {
   height: 898px;
   object-fit: cover;
   position: absolute;
-  top: -280px;
-  right: -190px;
+  top: -180px;
+  right: -170px;
   z-index: -1;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .possible-mobile {
@@ -162,8 +167,8 @@ body {
 
 @media screen and (max-width: 1024px) {
   .possible {
-    top: -240px;
-    right: -190px;
+    top: -150px;
+    right: -150px;
   }
 }
 
@@ -172,9 +177,8 @@ body {
     width: 600px;
     height: 600px;
     top: auto;
-    bottom: -20px;
+    bottom: 50px;
     right: -100px;
-    filter: blur(5px);
   }
   .header {
     padding: 0 2% 0 2%;
